--- a/public/test.html
+++ b/public/test.html
@@ -37,9 +37,9 @@
         }
     </script>
     <script>
-        if(!window.Yuta){
-            log("window.Yuta is "+window.Yuta)
-        }
+        window.Yuta={Bridge:{
+            invoke:function(){}
+        }}
 
 
         var callbacks={}
