--- a/public/test.html
+++ b/public/test.html
@@ -53,7 +53,7 @@
 
 
         $('#camera').click(function(){
-            Yuta.Bridge.invoke("getPicture",json.stringify({callbackId:'aa',data:{bb:1}}))
+            Yuta.Bridge.invoke("getPicture",JSON.stringify({callbackId:'aa',data:{bb:1}}))
         })
 
 
