--- a/public/test.html
+++ b/public/test.html
@@ -52,8 +52,12 @@
         }
 
 
+        window.__JavaJsCallBack=function(){
+
+        }
         $('#camera').click(function(){
             Yuta.Bridge.invoke("getPicture",JSON.stringify({callbackId:'aa',data:{bb:1}}))
+            __JavaJsCallBack('getPicture',JSON.stringify({callbackId:'aa',data:{bb:1}}))
         })
 
 
