--- a/public/test.html
+++ b/public/test.html
@@ -52,12 +52,11 @@
         }
 
 
-        window.__JavaJsCallBack=function(){
 
-        }
+
         $('#camera').click(function(){
-            Yuta.Bridge.invoke("getPicture",JSON.stringify({callbackId:'aa',data:{bb:1}}))
-            __JavaJsCallBack('getPicture',JSON.stringify({callbackId:'aa',data:{bb:1}}))
+            __JavascriptBridge__.invoke("getPicture",JSON.stringify({callbackId:'aa',data:{bb:1}}))
+//            __JavaJsCallBack('getPicture',JSON.stringify({callbackId:'aa',data:{bb:1}}))
         })
 
 
