--- a/public/test.html
+++ b/public/test.html
@@ -49,11 +49,9 @@
         }
 
 
-        var globalMount = window;
 
-        window.webkit.messageHandlers.__YutaJsBridge.invoke()
 
-        __YutaAppCallBack()
+//        __YutaAppCallBack()
 
 
 
