--- a/public/Yuta.html
+++ b/public/Yuta.html
@@ -24,8 +24,10 @@
 <body>
 <div style="padding-bottom: 60px;">
     <input type="button" id='camera' value="相机">
-    <img id="camera-img" src="" alt="相机传来的base64">
     <br>
+    <input type="button" id="share-img" value="image分享">
+    <br>
+    <input type="button" id="open" value="open webview">
 </div>
 <div id="log-msg"></div>
 <script>
@@ -48,7 +50,16 @@
         })
     })
 
+    $('#share-img').click(function(){
+        Yuta.Share.image("http://tp2.sinaimg.cn/1934160513/180/5718508909/1",
+                "http://wallstreetcn.com","title",'content',function(e){
+                    log(e)
+                })
+    })
 
+    $('#open').click(function(){
+        Yuta.WebView.open("http://wallstreetcn.com")
+    })
 </script>
 </body>
 </html>
