--- a/public/Yuta.html
+++ b/public/Yuta.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=3.0" name="viewport">
+    <meta content="telephone=no" name="format-detection">
     <title>Yuta test</title>
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
     <script src="Yuta.js"></script>
@@ -18,6 +21,15 @@
             overflow: auto;
             font-size: 16px;
             line-height: 20px;
+        }
+        input[type=button]{
+            height: 60px;
+            width: 100px;
+            margin: 20px 0;
+            display: inline-block;
+            -webkit-appearance: none;
+            background: #002faa;
+            color: #fff;
         }
     </style>
 </head>
