share web image

--- a/public/Yuta.html
+++ b/public/Yuta.html
@@ -152,7 +152,7 @@
     })
 
     $('#share-img').click(function () {
-        Yuta.Share.image("http://tp2.sinaimg.cn/1934160513/180/5718508909/1",
+        Yuta.Share.web("http://tp2.sinaimg.cn/1934160513/180/5718508909/1",
                 "http://wallstreetcn.com", "title", 'content', function (e) {
                     log(e)
                 })
